--- a/_config.yml
+++ b/_config.yml
@@ -10,21 +10,25 @@
 # in the templates via {{ site.myvariable }}.
 title: Jekyll Gulp Boilerplate
 email: krose@escaladesports.com
-description: > # this means to ignore newlines until "baseurl:"
-  Jekyll Gulp Boilerplate description
-baseurl: "" # the subpath of your site, e.g. /blog
+description: Jekyll Gulp Boilerplate description
+baseurl: "" # the subpath of your site
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
 
 # Build settings
 destination: ./docs
 markdown: kramdown
-theme: minima
-gems:
-  - jekyll-feed
-  - jekyll-seo-tag
-  - jekyll-sitemap
+permalink: /:categories/:title
+paginate: 3
+paginate_path: /archive/:num
+tag_page_layout: tag_page
+tag_page_dir: tags
+keep_files:
+    - img
+    - style.css
+    - script.js
+    - favicon.ico
+include:
+  - _pages
 exclude:
   - Gemfile
   - Gemfile.lock
